Fix for the masonry issue (image load + dimension unknown = overlapped masonry)

--- a/my-development-storefront/wwwroot/css/site.scss
+++ b/my-development-storefront/wwwroot/css/site.scss
@@ -178,6 +178,11 @@ ul.right-marker {
 }
 
 
+.tech-stack{
+    // predefined image height width
+    width: 50px;
+    height: 50px;
+}
 
 
 
